--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -5,7 +5,7 @@
         <li>
           <a href="/toy-problems">
             <p class="image-title">Toy Problems</p>
-            <img src="/img/toyProblems.jpg" alt="toy problems" />
+            <img class="home_image" src="/img/toyProblems.jpg" alt="toy problems" />
           </a>  
         </li>
       </div>
@@ -13,7 +13,7 @@
         <li>
           <a href="/blog">
             <p class="image-title">Blog</p>
-            <img src="/img/blog.jpg" alt="blog" />
+            <img class="home_image" src="/img/blog.jpg" alt="blog" />
           </a>
         </li>
       </div>  
@@ -21,7 +21,7 @@
         <li>
           <a href="/portfolio">
             <p class="image-title">Portfolio</p>
-            <img src="/img/portfolio.jpg" alt="portfolio" />
+            <img class="home_image" src="/img/portfolio.jpg" alt="portfolio" />
           </a>  
         </li>
       </div>
